--- a/registrationForm.html
+++ b/registrationForm.html
@@ -189,17 +189,17 @@
                     <span>Coop Door</span>
                     <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="openTimeDoor">Automatic Open Time</label>
-                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="openTimeDoor" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="closeTimeDoor">Automatic Close Time</label>
-                      <input id="closeTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="closeTimeDoor" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
                       <div class="form-check form-switch text-center justify-content-center">
-                        <input class="form-check-input" type="checkbox" role="switch"                     id="switchCoopDoor" checked="checked"/>
+                        <input class="form-check-input" type="checkbox" role="switch" id="switchCoopDoor" checked="checked"/>
                         <label class="form-check-label" for="switchCoopDoor">Open</label>
                       </div>
                     </div>
@@ -210,12 +210,12 @@
                     <span>Coop Light</span>
                     <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="onTimeLight">Automatic On Time</label>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="onTimeLight" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="offTimeLight">Automatic Off Time</label>
-                      <input id="offTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="offTimeLight" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3" style="margin: 0 auto;">
@@ -246,12 +246,12 @@
                     <span>Coop Heater</span>
                     <div class="input-group mb-3">
                       <label class="input-group-text" for="openTimeDoor">Heater On Temperature</label>
-                      <input id="openTimeDoor" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="openTimeDoor" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3">
                       <button>Heater Timer</button>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="onTimeLight" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                   </div>
@@ -261,12 +261,12 @@
                     <span>Coop Fan</span>
                     <div class="input-group mb-3">
                       <label class="input-group-text" for="onTimeLight">Fan On Temperature</label>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="onTimeLight" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3">
                       <button>Fan Timer</button>
-                      <input id="onTimeLight" type="time" class="form-control" id="timeInput" placeholder="Time" aria-label="Time"
+                      <input id="onTimeLight" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                   </div>
@@ -456,6 +456,7 @@
     let base_url = "https://simplecoop.swollenhippo.com/"
     let coopID = ''
     let strSessionID = ''
+    var arrEggs = [] 
 
     $("#btnCreateAccountLinker").on("click", function () {
       $("#divRegister").slideToggle();
@@ -496,14 +497,52 @@
     });
     /* Side Bar Buttons */
     $("#btnNavDashBoard").on("click", function () {
-      console.log("Dashboard");
+      let strobDateTime = new Date();
+      let strHumidity = "High";
+      let strTemp = 76;
       if (!dashboardActive) {
         $("#divDashboard").show();
         $("#divSettings").hide();
         dashboardActive = true;
         settingsActive = false;
       }
+      $.post(base_url+"environment.php",{SessionID:strSessionID,observationDateTime:strobDateTime, temperature:strTemp, humidity:strHumidity}).done(function(data){
+            let objResult = JSON.parse(data);
+            let outcome = objResult.Outcome;
+            console.log(outcome);
+        });
+        $.get(base_url+"environment.php",{SessionID:strSessionID,days:strobDateTime}).done(function(data){
+              console.log(data);
+        });
+      
     });
+
+    $("#btnAddEggs").on("click", function () {
+      let strEggs = $('#inputAddEggs').val();
+      let strobDateTime = new Date();
+
+      <!--NEED TO HAVE ARRAY, DAYS IS WEIRD, POST NOT ADDING EGGS.-->
+
+
+      $.post(base_url+"eggs.php",{SessionID:strSessionID,observationDateTime:strobDateTime, eggs:strEggs}).done(function(data){
+            let objResult = JSON.parse(data);
+            let outcome = objResult.Outcome;
+            console.log(outcome);
+            LogID = outcome;
+            $.ajax({
+                url: base_url+"eggs.php",
+                type: 'PUT',
+                data: {SessionID:strSessionID,LogID:LogID},
+                success: function(data) {
+                  console.log(data);
+                }
+              });
+        });
+        $.get(base_url+"eggs.php",{SessionID:strSessionID,days:strobDateTime}).done(function(data){
+              console.log(data);
+        });
+    });
+
 
     $("#btnNavSettings").on("click", function () {
       if (!settingsActive) {
@@ -512,16 +551,33 @@
         dashboardActive = false;
         settingsActive = true;;
       }
+      $.get(base_url+"settings.php",{SessionID:strSessionID,setting:strSettings}).done(function(data){
+            // SHOULD RETURN ARRAY OF JSON OBJECTS!
+        });
     });
 
     $("#btnSaveSettings").on("click", function () {
-      let strSettings = 'A';
-      let strValue = 'B';
+      let strSettings = '';
+      let strValue = '';
+      if("VALUES ARE DEFAULT"){
       $.post(base_url+"settings.php",{SessionID:strSessionID,setting:strSettings, value:strValue}).done(function(data){
             let objResult = JSON.parse(data);
             let outcome = objResult.Outcome;
             console.log(outcome);
         });
+      }
+      $.ajax({
+                url: base_url+"settings.php",
+                type: 'PUT',
+                data: {SessionID:strSessionID,setting:strSettings, value:strValue},
+                success: function(data) {
+                  console.log(data);
+
+                  $.get(base_url+"settings.php",{SessionID:strSessionID,  setting:strSettings}).done(function(data){
+                    console.log(data);
+                  });
+                }
+              });
       });
 
     $("#btnNavWarnings").on("click", function () {
@@ -626,19 +682,15 @@
               coopID = data;
         });
         $.post(base_url+"users.php",{Email:strEmail,Password:strPassword,FirstName:strFirstName, LastName:strLastName, CoopID:coopID}).done(function(data){
-            console.log(data);
             let objResult = JSON.parse(data);
             let outcome = objResult.Outcome;
-            console.log(outcome);
             if(outcome == "New User Created"){
-              $.post(base_url+"useraddress.php",{Email:strEmail,Street1:strStreet1, Street2:strStreet2, City:strCity, State:strState, ZIP: strZIP}).done(function(data){
-                console.log(data);
-                console.log(coopID);
-              });
+              $("#divLogin").slideToggle();
+              $("#divHome").slideToggle();
+              $.post(base_url+"useraddress.php",{Email:strEmail,Street1:strStreet1, Street2:strStreet2, City:strCity, State:strState, ZIP: strZIP});
               $.post(base_url+"sessions.php",{Email:strEmail,Password:strPassword}).done(function(data){
                 sessionStorage.setItem("SessionID", data);
                 strSessionID = sessionStorage.getItem("SessionID");
-                console.log(strSessionID);
               });
               if ($("#diffAddressCheck").is(":checked")) {
                 strStreet1 = $("#inputCoopAddress1").val();
@@ -655,10 +707,10 @@
                   console.log(data);
                 }
               });
-          }
-        });
-      }
-    });
+            }
+          });
+        }
+      });
   </script>
   <script>
     const labels = [
