--- a/registrationForm.html
+++ b/registrationForm.html
@@ -66,7 +66,6 @@
       backdrop-filter: blur(6.4px);
       -webkit-backdrop-filter: blur(6.4px);
     }
-
     /* Bar Animation */
     .bar {
       position: relative;
@@ -134,7 +133,7 @@
           <div class="row justify-content-center">
             <div class="form-group col-sm-6 mt-4">
               <button type="button" class="btn" id="btnLogin"
-                style="background-color: #bc6c25; color: white; width: 50%">
+                style="background-color: #bc6c25; color: white; ">
                 Login
               </button>
               <div>
@@ -145,10 +144,12 @@
               </div>
             </div>
             <hr />
+            <div class="form-group col-sm-6 mt-4">
             <button type="button" class="btn" id="btnCreateAccountLinker"
-              style="background-color: #5a3719; color: white; width: 20%">
+              style="background-color: #5a3719; color: white; ">
               Create Account
             </button>
+            </div>
           </div>
         </div>
       </div>
