--- a/registrationForm.html
+++ b/registrationForm.html
@@ -12,6 +12,7 @@
   <script src="https://kit.fontawesome.com/a8f8b3334a.js" crossorigin="anonymous"></script>
   <style>
     /* Background*/
+
     html {
       background: url(images/background.jpg) no-repeat center center fixed;
       -webkit-background-size: cover;
@@ -55,6 +56,19 @@
     }
 
     .card {
+      padding: 30px 40px;
+      margin-top: 60px;
+      margin-bottom: 60px;
+      border: none;
+      box-shadow: 0 18px 22px 0 rgba(0, 0, 0, 0.2);
+      background: rgba(255, 255, 255, 0.4);
+      border-radius: 16px;
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+      backdrop-filter: blur(6.4px);
+      -webkit-backdrop-filter: blur(6.4px);
+    }
+
+    .card2 {
       padding: 30px 40px;
       margin-top: 60px;
       margin-bottom: 60px;
@@ -320,36 +334,28 @@
         </div>
       </div>
       <div id="divContent" class="col py-3 d-flex justify-content-center">
-        <div id="divDashboard" class="col py-3 d-flex justify-content-center align-items-center ">
-          <div class="card col-md-10 col-8 h-auto" style="background-color: none;">
-            <div class="row d-flex justify-content-center m-3">
-              <div class="col-3">
-                <div class="card col-10 dashCard">
-                  <span>Total Eggs Harvested:</span>
-                  <h2>3894</h2>
+        <div id="divDashboard" class="col py-3 d-flex justify-content-center">
+          <div class="card col-md-10 col-8 h-auto justify-content-center" style="background-color: none;">
+            <div class="row justify-content-evenly">
+                <div class="card col-9 dashCard">
+                  <h6>Total Eggs:</h6>
+                  <h4>3894</h4>
+                </div>
+                <div class="card col-9 dashCard">
+                  <h6>Current Temp:</h6>
+                  <h4>56°</h4>
+                </div>
+                <div class="card col-9 dashCard">
+                  <h6>Humidity:</h6>
+                  <h4>46%</h4>
+                </div>
+                <div class="card col-9 dashCard">
+                  <h6>Cleanout In:</h6>
+                  <h4 id="cleanoutDay"></h4>
                 </div>
               </div>
-              <div class="col-3">
-                <div class="card col-10 dashCard">
-                  <span>Current Temperature</span>
-                  <h2>56°</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10 dashCard">
-                  <span>Current Humidity</span>
-                  <h2>46%</h2>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="card col-10 dashCard">
-                  <span>Days Until Next Cleanout</span>
-                  <h2 id="cleanoutDay"></h2>
-                </div>
-              </div>
-            </div>
             <div class="m-3">
-              <canvas id="myChart" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
+              <canvas class="d-none d-sm-block" id="myChart" style="background-color: rgba(255, 255, 255, 0.45);"></canvas>
             </div>
           </div>
         </div>
