--- a/registrationForm.html
+++ b/registrationForm.html
@@ -402,7 +402,7 @@
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="card col-10" style="height: 171%;">
+                  <!-- <div class="card col-10" style="height: 171%;">
                     <span>Alarms</span>
                     <div class="row d-flex justify-content-center p-3" style="height: 50%;">
                       <h4>LOW FOOD ALARM</h4>
@@ -412,20 +412,20 @@
                       <h4>LOW WATER ALARM</h4>
                       <i class="fa-sharp fa-solid fa-check-to-slot" style="font-size: 4em;"></i>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
               <div class="row d-flex p-3">
                 <div class="col-4">
                   <div class="card col-12">
                     <span>Coop Heater</span>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="onTempHeater">Heater On Temperature</label>
-                      <input data-settings="onTempHeater" id="onTempHeater" class="settingClass" class="form-control" placeholder="Time" aria-label="Time"
+                      <input data-settings="onTempHeater" id="onTempHeater" class="col-10 settingClass" class="form-control" placeholder="Temperature" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3">
-                      <button>Heater Timer</button>
+                      <label class="input-group-text" for="onTempHeater">Heater Timer</label>
                       <input data-settings="heaterTimer" id="heaterTimer" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
@@ -434,13 +434,13 @@
                 <div class="col-4">
                   <div class="card col-12">
                     <span>Coop Fan</span>
-                    <div class="input-group mb-3">
+                    <div class="input-group mb-3 justify-content-center">
                       <label class="input-group-text" for="onTempFan">Fan On Temperature</label>
-                      <input data-settings="onTempFan" id="onTempFan" class="settingClass" class="form-control" placeholder="Time" aria-label="Time"
+                      <input data-settings="onTempFan" id="onTempFan" class="col-10 settingClass" class="form-control" placeholder="Temperature" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
                     <div class="row d-flex justify-content-center p-3">
-                      <button>Fan Timer</button>
+                      <label class="input-group-text" for="onTempHeater">Fan Timer</label>
                       <input data-settings="lightTimer" id="lightTimer" class="settingClass" type="time" class="form-control" placeholder="Time" aria-label="Time"
                         aria-describedby="basic-addon2">
                     </div>
